--- a/src/main/resources/templates/recibo.html
+++ b/src/main/resources/templates/recibo.html
@@ -116,6 +116,7 @@
 </head>
 
 <body>
+    <header th:include="components/menu"></header>
     <div class="recibo-container mt-5">
         <div class="recibo-titulo">
             <img src="../img/logo_recibo.png" alt="Logo" />
