--- a/src/main/resources/templates/components/menu.html
+++ b/src/main/resources/templates/components/menu.html
@@ -18,7 +18,7 @@
 
       <div class="sp-list-container" id="menu-list">
         <ul class="sp-lists">
-          <li><a th:classappend="${activePage == 'bienvenido'} ? 'sp-bg-hover'" th:href="@{/registro_completar}">Inicio</a></li>
+          <li><a th:classappend="${activePage == 'index'} ? 'sp-bg-hover'" th:href="@{/}">Inicio</a></li>
           <li><a th:classappend="${activePage == 'carta'} ? 'sp-bg-hover'" th:href="@{/carta}">Carta</a></li>
           <li><a th:href="@{/Nosotros}">Nosotros</a></li>
         </ul>
