--- a/src/main/resources/templates/micuenta.html
+++ b/src/main/resources/templates/micuenta.html
@@ -9,22 +9,11 @@
     </link>
     <style>
         /* ===== Reset ===== */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: "Segoe UI", sans-serif;
-            background: #f4f6f9;
-            color: #333;
-        }
 
         /* ===== Layout ===== */
         .main-container-cuenta {
             display: flex;
-            min-height: 100vh;
+            margin-top: 60px;
         }
 
         /* ===== Sidebar ===== */
