--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -5,7 +5,7 @@
 .sp-menu {
     height: 60px;
     position: fixed;
-    top: 0;
+    top: 0 !important;
     left: 0;
     width: 100%;
     z-index: 1000;
