--- a/src/main/resources/templates/components/link.html
+++ b/src/main/resources/templates/components/link.html
@@ -1,1 +1,4 @@
 <script src="https://kit.fontawesome.com/35db202371.js" crossorigin="anonymous"></script>
+
+<link rel="stylesheet" href="./css/font.css">
+<link rel="stylesheet" href="./css/colors.css">
