--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -299,3 +299,16 @@ a:hover {
         font-size: 1rem;
     }
 }
+
+.forgot-password-link {
+    display: block;
+    margin-top: 10px;
+    color: #007bff;
+    text-decoration: none;
+    font-size: 14px;
+    text-align: right;
+}
+
+.forgot-password-link:hover {
+    text-decoration: underline;
+}
