--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Selección de Rol | Nextclass</title>
+    <title>Selección de Rol | SaboresPeruanos</title>
     <link rel="stylesheet" href="/css/login.css">
 </head>
 <body class="light_mode">
@@ -50,6 +50,9 @@
                             <input type="submit" value="Ingresar" class="btn-login-submit" name="iniciar_sesion">
                             <button type="button" onclick="closeModal()" class="btn-modal-action btn-modal-cancel cabin">Cancelar</button>
                         </form>
+                        <p class="register-text">
+                            ¿Olvidaste tu contraseña? <a th:href="@{/recuperar}">Recupérala aquí</a>
+                        </p>
                     </div>
                 </div>
 
