--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -46,14 +46,14 @@
                                 <label for="contrasena">Contraseña:</label>
                                 <input type="password" id="contrasena" name="contrasena" class="login-input" placeholder="Contraseña" required />
                             </div>           
-                            <a href="#" onclick="openForgotPasswordModal()" class="forgot-password-link">¿Olvidaste tu contraseña?</a>                 
+                            <a href="#" onclick="openForgotPasswordModal()" class="forgot-password-link">Recueprar Contraseña</a>                 
                             <input type="submit" value="Ingresar" class="btn-login-submit" name="iniciar_sesion">
                             <button type="button" onclick="closeModal()" class="btn-modal-action btn-modal-cancel cabin">Cancelar</button>
                         </form>
                     </div>
                 </div>
 
-                <!-- Modal Recuperar Contraseña -->
+                <!-- Modal para recuperar contraseña -->
 <div id="forgotPasswordModal" class="modal-overlay" style="display:none;">
     <div class="modal-box league-spartan">
         <h3>Recuperar Contraseña</h3>
