--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -312,3 +312,16 @@ a:hover {
 .forgot-password-link:hover {
     text-decoration: underline;
 }
+
+
+.error-message {
+    background-color: #ffe6e6;
+    color: #d8000c;
+    border: 1px solid #d8000c;
+    padding: 10px;
+    border-radius: 8px;
+    text-align: center;
+    margin-bottom: 15px;
+    font-weight: bold;
+}
+
